Fix alignment for smaller displays

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,7 @@
 html {
   background-color: #282428;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
+  width: fit-content;
 }
